--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 
 <p>
 very amateur programming experiments & more
+  
+  <br><br>
+  
+  (<a href="https://ko-fi.com/asmalljelly">but if you're into it</a>)
 </p>
 
 
   <ul>
     <li>
-      <a href="/rhythm.html">4/4 rhythms</a>
+
     </li>
     <li>
       <a href="">coming soon</a>
