--- a/index.html
+++ b/index.html
@@ -2,32 +2,50 @@
 <html>
   <head>
     <title>a small jelly</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   
 <body>
 
-  <h1>hello world</h1>
+  <div class="container">
 
-  <h4>some projects</h4>
+    <div class="row">
+
+      <div class="column">
+        <div id="title-column">
+          <h1>hello world</h1>
+          <h4>some projects by a-small-jelly</h4>
+          <p>asmalljelly [at] gmail</p>
+          <p><a href="https://ko-fi.com/asmalljelly">ko-fi</a></p>
+        </div>
+      </div>
+
+      <div class="column">
+        <div id="description">
+        <h4>very amateur programming experiments & more</h4>
+        </div>
+        <div class="category" id="games">
+          games
+          <ul>
+            <li>
+              <a href="https://a-small-jelly.github.io/DM-dice-roller/">DM dice roller</a>
+          </li>
+          </ul>
+        </div>
+        <div class="category" id="music">
+          music
+         <ul>
+            <li>
+            <a href="https://a-small-jelly.github.io/4-4-rhythm-generator/">4/4 rhythms</a>
+          </li>
+        </ul>
+        </div>
+      </div>
+
+    </div>
 
 
-<p>
-very amateur programming experiments & more
-  
-  <br><br>
-  
-  (<a href="https://ko-fi.com/asmalljelly">but if you're into it</a>)
-</p>
-
-
-  <ul>
-    <li>
-
-    </li>
-    <li>
-      <a href="">coming soon</a>
-    </li>
-  </ul>
+  </div>
 
 </body>
 </html>
