--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       
        <div class="category" id="words">
-          music
+          words
          <ul>
             <li>
             <a href="https://a-small-jelly.github.io/text-formatter/">text formatter</a>
@@ -51,7 +51,7 @@
         </div>
     
        <div class="category" id="fun">
-          music
+          fun
          <ul>
             <li>
             <a href="https://a-small-jelly.github.io/quiz/">twilight meme quiz</a>
